--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -95,6 +95,10 @@
 .pokemon-card-container img {
   background-color: lightskyblue;
   border-radius: 5px;
+  width: 100%;
+  height: auto;
+  display: block;
+  aspect-ratio: 1 / 1;
 }
 
 .pokemon-card-container p {
